--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
 # Site settings
-title:
+title: Shai Sachs
 email:
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "http://shaisachs.github.io" # the base hostname & protocol for your site
 
 # User setting
-owner:
+owner: Shai Sachs
 email:
-facebook_username:
-twitter_username:
-github_username:
+facebook_username: shaisachs
+twitter_username: shaisachs
+github_username: shaisachs
 address:
   - line:
   - line:
   # Feel free to add more lines here 
 telephone:
-copyright:
+copyright: Shai Sachs 2016
 
 # API settings
 google_api_key:
