Change background and setup basic structure;
Signed-off-by: Shai Sachs <ssachs@ngpvan.com>

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ address:
   - line:
   # Feel free to add more lines here 
 telephone:
-copyright: Shai Sachs 2016
+copyright: Shai Sachs
 
 # API settings
 google_api_key:
