--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: Shai Sachs
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal website for Shai Sachs. Includes blog posts, book reviews, and projects.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://shaisachs.github.io" # the base hostname & protocol for your site
 
@@ -22,3 +20,7 @@ google_api_key:
 
 # Build settings
 markdown: kramdown
+
+collections:
+  projects:
+    order:
