--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email:
 description: > # this means to ignore newlines until "baseurl:"
   Personal website for Shai Sachs. Includes blog posts, book reviews, and projects.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://shaisachs.github.io" # the base hostname & protocol for your site
+url: "https://shaisachs.com"
 
 # User setting
 owner: Shai Sachs
