--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ email:
 facebook_username: shaisachs
 twitter_username: shaisachs
 github_username: shaisachs
+linkedin_username: shaisachs
 telephone:
 copyright: Shai Sachs
 
