add mastodon profile
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ url: "https://shaisachs.com"
 owner: Shai Sachs
 email:
 facebook_username: shaisachs
+mastodon_host: mstdn.party
+mastodon_username: shaisachs
 twitter_username: shaisachs
 github_username: shaisachs
 linkedin_username: shaisachs
